--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>♾️( ͡° ͜ʖ ͡°)♾️</title>
+    <title>Pregunta para Carlos</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Pregunta</h1>
+        <h1>¿Aprobé el trimestre?</h1>
         <div class="buttons">
             <button id="yesButton">Don't move</button>
             <button id="noButton">Move</button>
