Cambiar el mensaje de los botones y de la alerta

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <div class="container">
         <h1>¿Aprobé el trimestre?</h1>
         <div class="buttons">
-            <button id="yesButton">Don't move</button>
-            <button id="noButton">Move</button>
+            <button id="yesButton">CLAROOOO</button>
+            <button id="noButton">no</button>
         </div>
     </div>
     <script src="script.js"></script>
